[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "deepracer-env"
dynamic = ["version"]
description = "Gymnasium environment for the AWS DeepRacer Gazebo/ROS simulation"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["gymnasium", "reinforcement-learning", "deepracer", "ros", "gazebo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "gymnasium>=0.29.0",
    "numpy>=1.24",
    "scipy",
    "shapely>=1.6",
    "opencv-python>=4.9",
]

[project.optional-dependencies]
# Extra dependencies for running training examples
examples = [
    "stable-baselines3",
]

[project.urls]
Repository = "https://github.com/aws-deepracer-community/deepracer-env"

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.setuptools.packages.find]
where = ["."]
include = ["deepracer_env*"]
