<?xml version="1.0"?>
<!--
Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
SPDX-License-Identifier: Apache-2.0
-->
<package format="3">
  <name>deepracer_gazebo_system_plugin</name>
  <version>1.0.0</version>
  <description>The AWS DeepRacer Gazebo System package</description>
  <maintainer email="aws-deepracer@amazon.com">AWS DeepRacer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS 2 dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>deepracer_msgs</depend>

  <!-- Gazebo Harmonic dependencies -->
  <depend>gz-sim8</depend>
  <depend>gz-plugin2</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
