<?xml version="1.0"?>
  <!--
	 Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
	 SPDX-License-Identifier: Apache-2.0
	 -->
<package format="3">
  <name>deepracer_msgs</name>
  <version>1.0.0</version>
  <description>AWS DeepRacer Gazebo messages</description>
  <maintainer email="aws-deepracer@amazon.com">AWS DeepRacer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Interface generation dependencies -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Message dependencies -->
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <!-- ROS 2 dependencies -->
  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
