<?xml version="1.0"?>
<!--
Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
SPDX-License-Identifier: Apache-2.0
-->
<package format="3">
  <name>deepracer_simulation_environment</name>
  <version>1.0.0</version>
  <description>The AWS DeepRacer simulation environment package</description>
  <maintainer email="aws-deepracer@amazon.com">AWS DeepRacer</maintainer>
  <license>Apache2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <depend>rclpy</depend>
  <depend>ament_index_python</depend>
  <depend>ros_gz_sim</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>deepracer_msgs</depend>

  <exec_depend>python3-defusedxml</exec_depend>
  <exec_depend>aws_cpp_sdk_logs</exec_depend>
  <exec_depend>aws_cpp_sdk_kinesis</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>python3-shapely</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-jsonschema</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>