<?xml version="1.0"?>
<package format="2">
  <name>deepracer_simulation_environment</name>
  <version>1.0.0</version>
  <description>The AWS DeepRacer simulation environment package</description>
  <maintainer email="aws-deepracer@amazon.com">AWS DeepRacer</maintainer>
  <license>Apache2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>rospy</depend>
  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>deepracer_msgs</depend>

  <exec_depend>python3-defusedxml</exec_depend>
  <exec_depend>catkin</exec_depend>
  <exec_depend>aws_cpp_sdk_logs</exec_depend>
  <exec_depend>aws_cpp_sdk_kinesis</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>ros_control</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>python3-shapely</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-jsonschema</exec_depend>

  <test_depend>python3-pytest</test_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <gazebo_ros gazebo_model_path="${prefix}" />
    <gazebo_ros plugin_path="${prefix}/.." />
  </export>
</package>
