<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kinesis_webrtc_streamer</name>
  <version>0.0.1</version>
  <description>ros streamer node</description>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>aws_common</build_depend>
  <build_depend>aws_ros1_common</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>kinesis_video_msgs</build_depend>
  <build_depend>kinesis_webrtc_manager</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>aws_common</exec_depend>
  <exec_depend>aws_ros1_common</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>kinesis_video_msgs</exec_depend>
  <exec_depend>kinesis_webrtc_manager</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
