<?xml version="1.0"?>
<package format="3">
  <name>h264_encoder_core</name>
  <version>2.0.3</version>
  <description>Common base code for ROS1/ROS2 H264 encoder node</description>
  <url>http://wiki.ros.org/h264_encoder_core</url>

  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
  
  <license>LGPLv2.1</license>

  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

  <build_depend>aws_common</build_depend>
  <build_depend>ffmpeg</build_depend>

  <build_export_depend>aws_common</build_export_depend>

  <exec_depend>aws_common</exec_depend>
  <exec_depend>ffmpeg</exec_depend>

<!--   <test_depend condition="$ROS_VERSION == 1">gtest</test_depend>
  <test_depend condition="$ROS_VERSION == 1">google-mock</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_cmake_gtest</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_cmake_gmock</test_depend>
 -->
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
